--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,7 @@
   <div class="wrapper">
     @@include('html/header.html', {})
     <main class="paig">
-      <section class="main">
+      <section class="main homeid1">
         <div class="main__conteiner">
           <div class="main__block">
             <div class="main-text __anim-items __anim-no-hide">
@@ -74,7 +74,7 @@
           </div>
         </div>
       </section>
-      <section class="history">
+      <section class="history homeid3">
         <div class="history__conteiner">  
           <div class="history__block">
             <div class="history__text __anim-items __anim-no-hide">
@@ -141,7 +141,7 @@
           </div>
         </div>
       </section>
-      <section class="dishes">
+      <section class="dishes homeid2">
         <div class="dishes__conteiner">
           <div class="dishes__title __anim-items __anim-no-hide">
             Наші <span class="history__span">Страви</span>
@@ -197,7 +197,7 @@
           </div>
         </div>
       </section>
-      <section class="manu">
+      <section class="manu homeid4">
         <div class="manu__conteiner">
           <div class="manu__block">
             <div class="manu__title __anim-items __anim-no-hide">
